--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,9 @@
 body{
-  background-image: url(/home/patricia/Documents/Portfolio/image/dark_hand.jpg);
-  background-repeat: repeat-x;
-  background-repeat: repeat-y;
-}
-  
+  background-image: url("/home/patricia/Documents/Portfolio/image/dark_hand.jpg");
+  background-repeat: repeat;
+  background-size: 300px;
+ }
+
  .white{
     color: red;
   }
