changed immage pasth

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body{
-  background-image: url("/home/patricia/Documents/Portfolio/image/dark_hand.jpg");
+  background-image: url("../image/dark_hand.jpg");
   background-repeat: repeat;
   background-size: 310px;
  }
